# tetris

./: .gitignore  CMakeLists.txt  README.md  piece_list.txt  vcpkg.json
.github/workflows/: ci.yml
src/: ai.cpp  ai.h  engine.cpp  main.cpp  tetris_movement.h  train.cpp  weightsio.h
weights/: w0.txt  w3.txt  w6.txt  w7.txt  w8.txt
weights/best/: 1121220 (no-activation).txt  trialanderror.txt
weights/no-activation/: w0.txt  w1.txt  w2.txt  w4.txt  w5.txt
weights/tanh-t1/: w0.txt  w1.txt  w10.txt  w11.txt  w12.txt  w13.txt  w14.txt  w15.txt  w16.txt  w17.txt  w18.txt  w19.txt  w2.txt  w20.txt  w21.txt  w22.txt  w23.txt  w24.txt  w25.txt  w26.txt  w27.txt  w28.txt  w29.txt  w3.txt  w30.txt  w31.txt  w32.txt  w33.txt  w34.txt  w35.txt  w36.txt  w4.txt  w5.txt  w6.txt  w7.txt  w8.txt  w9.txt
